[package]
name = "advance_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-machine = { git = "https://github.com/cartesi/dave", rev = "ad5b22b17a079a9b08eb0d52b30c564bf0e350d1", features = ["download_uarch"] }
reflink = "0.1.3"
alloy-sol-types = "1.0.0"
alloy-primitives = "1.0.0"
hex = "0.4.3"
snafu = "0.8.5"
sha3 = "0.10.8"